objects/Student__c.object
<CustomObject>
    <description>Student&apos;s records</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of Student</description>
        <inlineHelpText>Address of Student</inlineHelpText>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of Student</description>
        <inlineHelpText>Age of Student</inlineHelpText>
        <label>Age</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailID__c</fullName>
        <description>Email ID of Student</description>
        <inlineHelpText>Email ID of Student</inlineHelpText>
        <label>EmailID</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of Student</description>
        <inlineHelpText>First Name of Student</inlineHelpText>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Full Name of Student</description>
        <formula>First_Name__c  &amp; &quot; &quot;  &amp;  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full Name of Student</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of Student</description>
        <inlineHelpText>Last Name of Student</inlineHelpText>
        <label>Last Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>StudentID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Age_limit</fullName>
        <active>true</active>
        <description>Validation for age limits</description>
        <errorConditionFormula>Age__c  &lt; 15</errorConditionFormula>
        <errorDisplayField>Age__c</errorDisplayField>
        <errorMessage>Please enter the age in range of 15-24</errorMessage>
    </validationRules>
</CustomObject>